--- a/test/ui/README
+++ b/test/ui/README
@@ -1,4 +1,4 @@
 
-The code was used to delete old test Chargify subscriptions/customers via Cahrgify UI, and later the code was replaced with 
-API calls. The code is not in use anymore - just leaving it here as an example of automated access to a website.
+This directory holds all UI testing code. Please see page https://revwiki.atlassian.net/wiki/spaces/EN/pages/17170457/Portal+UI+testing+Framework
+for a detailed description of the testing framework.
 
